backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: examportal-backend
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: examportal-backend
  template:
    metadata:
      labels:
        app: examportal-backend
    spec:
      containers:
        - name: backend
          image: nodetestregistery.azurecr.io/backend:latest
          ports:
            - containerPort: 3000
