backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: examportal-backend-service
spec:
  selector:
    app: examportal-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer  # Use LoadBalancer for external access, or NodePort for testing purposes
