backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: examportal-backend-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    # - host: your-domain-name.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: examportal-backend-service
                port:
                  number: 80
